k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-demo-service
  namespace: jenkins-k8s-demo
spec:
  selector:
    app: jenkins-demo
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
