k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-demo-ingress
  namespace: jenkins-k8s-demo
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-demo-service
                port:
                  number: 80
